--- a/MathematicalStatistics.tex
+++ b/MathematicalStatistics.tex
@@ -36,6 +36,7 @@
 \renewcommand{\prob}{\mathbf{P}}
 \newcommand{\expect}{\mathbf{E}}
 \newcommand{\io}{\,\,\,\mathrm{io.}}
+\newcommand{\sgn}{\mathrm{sgn}}
 
 \newcommand{\erf}{\mathrm{erf}}
 \newcommand{\Be}{\mathrm{B}}
