--- a/MathematicalStatistics.tex
+++ b/MathematicalStatistics.tex
@@ -37,6 +37,7 @@
 \newcommand{\expect}{\mathbf{E}}
 \newcommand{\io}{\,\,\,\mathrm{io.}}
 \newcommand{\sgn}{\mathrm{sgn}}
+\newcommand{\trans}{\mathsf{T}}
 
 \newcommand{\erf}{\mathrm{erf}}
 \newcommand{\Be}{\mathrm{B}}
