--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -1878,7 +1878,7 @@
     \begin{enumerate}
         \item 임의의 $y\in U$에 대해 함수 $x\mapsto f(x,\,y)$가 적분가능하다.
         \item 거의 대부분의 $x\in X$에 대해 함수 $y\mapsto f(x,\,y)$가 미분가능하다.
-        \item 임의의 $y\in U$에 대해 함수 $x\mapsto(\partial f/\partial y)(x,\,y)$가 가측이다.\footnotemark
+        \item 임의의 $y\in U$에 대해 함수 $x\mapsto(\partial/\partial y)f(x,\,y)$가 가측이다.\footnotemark
         \item 적당한 적분가능한 함수 $g:X\to\overline{\mathbb{R}}^+_0$가 존재하여 $X\times U$에서 $|\partial f/\partial y|\leq g$이다.
     \end{enumerate}
     그렇다면 함수 $y\mapsto\int_Xf(x,\,y)\,d\mu(x)$는 미분가능하고 임의의 $y\in U$에 대해 함수 $x\mapsto(\partial f/\partial y)(x,\,y)$는 적분가능하며 다음이 성립한다.
