--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -220,7 +220,7 @@
     이는 \texttt{Borel} 함수와 가측함수의 합성은 가측이라는 점에서 자명하다.
 \end{proof}
 
-비록 정의상 \texttt{rv.}는 엄연한 함수이지만 그 이름에서도 잘 드러나듯이 확률론에서는 이를 마치 변수처럼 생각하고 사용하는 경우가 많다. 이는 이론적인 이유에서라기보다 실생활의 응용에서 이렇게 생각하는 편이 조금 더 직관적으로 편하기 때문이다. 이러한 우리의 인식은 \texttt{rv.}와 관련된 여러 표기상의 관례에 잘 나타나는데, 위의 정리에서의 합성 $g\circ X$를 마치 $g$에 $X$라는 변수를 대입한 것으로 생각하여 $g(X)$로 쓰는 관례가 대표적인 예시이다. 그러나 이런 표기법은 어디까지나 관례일 뿐, \texttt{rv.}가 변수가 아닌 함수라는 사실은 항상 염두에 두고 있어야 한다.
+비록 정의상 확률벡터는 엄연한 함수이지만 그 이름에서도 잘 드러나듯이 확률론에서는 이를 마치 변수처럼 생각하고 사용하는 경우가 많다. 이는 이론적인 이유에서라기보다 실생활의 응용에서 이렇게 생각하는 편이 조금 더 직관적으로 편하기 때문이다. 이러한 우리의 인식은 확률벡터와 관련된 여러 표기상의 관례에 잘 나타나는데, 위의 정리에서의 합성 $g\circ X$를 마치 $g$에 $X$라는 변수를 대입한 것으로 생각하여 $g(X)$로 쓰는 관례가 대표적인 예시이다. 그러나 이런 표기법은 어디까지나 관례일 뿐, 확률벡터가 변수가 아닌 함수라는 사실은 항상 염두에 두고 있어야 한다.
 
 이어서, 측도론에서 \texttt{FTC}를 일반화하는 과정에서 잠시 스쳐 지나갔던 \texttt{pushfowarding}이 다시 등장한다. 비록 측도론에서의 \texttt{pushfowarding}은 도구 역할에 그쳤지만, 확률론에서의 \texttt{pushfowarding}은 빼놓을 수 없는 핵심적인 개념이다.
 
@@ -230,6 +230,8 @@
 
 교양 통계학에서 배운 \texttt{PDF}나 \texttt{\texttt{CDF}}와 같이 확률론에는 방금 정의한 분포와 쉽게 혼동될 법한 개념들이 많고, 실제로 각자의 정의도 서로 긴밀히 연결되어 있다. 여기에 한술 더 떠서 문헌마다 조금씩 용어를 다르게 쓰는 바람에 혼란이 가중되는 부분이 없지 않지만, 대부분 논의의 맥락으로 적당히 구별할 수 있다. 아무튼 구태여 혼란을 초래할 필요는 없기에, 이 책에서는 용어를 최대한 잘 구별하여 사용하였다.
 
+나중에 하나씩 보겠지만, 확률벡터가 가지는 성질과 특성 중에는 그 확률벡터 자체가 아닌, 그 분포에 의존하는 성질들이 있다. 곧, 이러한 성질들은 서로다른 확률공간에서 정의된 서로다른 확률벡터라도 분포만 같다면 서로 공유하게 된다. 이를 뒤집어 생각하면 때로는 하나의 확률공간에 정의된 확률벡터를 그 분포에 의존하는 성질들을 그대로 유지하면서 다른 확률공간으로 옮길 수도 있다. 이러한 이유로 분포가 같은 확률벡터를 다루게 되는 경우가 많고, 표기의 편의를 위해 확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P}),\,(\Omega',\,\mathcal{F}',\,\mathbb{P}')$에서 각각 정의된 확률벡터 $X:\Omega\to\mathbb{R}^n,\,Y:\Omega'\to\mathbb{R}^n$에 대해 $\prob_X=\prob_Y$이면 이를 간단히 $X\equiv Y$로 쓴다. 이때 $X\equiv Y$이지만 $X\ne Y$일 수 있다는 사실에 주의해야 한다.
+
 \begin{proposition}\label{prop:rvProbSpace}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 $(\mathbb{R}^n,\,\mathcal{B}_n,\,\prob_X)$는 확률공간을 이룬다.
 \end{proposition}
@@ -238,7 +240,7 @@
     먼저 $\mathcal{B}_n\subseteq X_*\mathcal{F}$임을 보이기 위해 임의의 $A\in\mathcal{B}_n$를 택하면 $X^{-1}(A)\in\mathcal{F}$이므로 $A\in X_*\mathcal{A}$에서 $\mathcal{B}_n\subseteq X_*\mathcal{F}$이다. 따라서 $\prob_X$가 확률측도임을 보이면 충분한데, 이는 $\prob_X(\mathbb{R}^n)=\mathbb{P}(X^{-1}(\mathbb{R}^n))=\mathbb{P}(\Omega)=1$에서 쉽게 알 수 있고, 곧 증명이 끝난다.
 \end{proof}
 
-위의 명제는 분포를 통해 서로다른 확률공간에 정의된 확률측도를 각각 다루는 대신 이들을 \texttt{pushfowarding}하여 $\mathcal{B}_n$에서 정의된 확률측도로 일관되게 다룰 수 있음을 함의한다. 그리고 생각해보면, 이가 곧 사건을 직접 정의하고 사용하는 대신 \texttt{rv.}를 도입하여 사용하는 이유이다. 무엇이 될 지 모르는 확률공간 대신 우리가 잘 알고있는 실수공간에서의 확률측도를 다루는 것이 훨씬 편하다. 한편, 위의 정리의 역이 성립한다는 것도 꽤나 흥미로운 사실이다.
+위의 명제는 분포를 통해 서로다른 확률공간에 정의된 확률측도를 각각 다루는 대신 이들을 \texttt{pushfowarding}하여 $\mathcal{B}_n$에서 정의된 확률측도로 일관되게 다룰 수 있음을 함의한다. 그리고 생각해보면, 이가 곧 사건을 직접 정의하고 사용하는 대신 확률벡터를 도입하여 사용하는 이유이다. 무엇이 될 지 모르는 확률공간 대신 우리가 잘 알고있는 실수공간에서의 확률측도를 다루는 것이 훨씬 편하다. 한편, 위의 정리의 역이 성립한다는 것도 꽤나 흥미로운 사실이다.
 
 \begin{theorem}\label{thm:probSpaceRv}
     \texttt{Borel} $\sigma$-대수 $\mathcal{B}_n$ 위의 확률측도 $\mu$에 대해 적당한 확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$가 존재하여 $\mu=\prob_X$이다. 특별히, 이때 $(\Omega,\,\mathcal{F})=(\mathbb{R}^n,\,\mathcal{B}_n)$이도록 잡을 수 있다.
@@ -270,7 +272,7 @@
     모순을 유도하기 위해 $X$가 이산확률벡터인 동시에 연속확률벡터라고 하자. 그렇다면 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가지는데, $\mu_n(A)=0$에서 $\prob_X(A)=0$의 모순이 발생한다. 이번에는 $X$가 이산확률벡터인 동시에 특이확률벡터라 하자. 그렇다면 이건과 같이 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가지는데, 이의 가산개의 원소를 $x_1,\,x_2,\,\cdots$와 같이 나열하면 $\prob_X(A)=\sum_{i=1}^k\prob_X\{x_i\}=0$에서 모순이 발생한다. (여기서 $k$는 유한할 수도 있고, $\infty$일 수도 있다.) 마지막으로 $X$가 연속확률벡터인 동시에 특이확률벡터라 하면 $\prob_X\ll\mu_n$이고 $\prob_X\perp\mu_n$이므로 $\prob_X=0$의 모순이 발생하고, 증명은 이로써 충분하다.
 \end{proof}
 
-일반적으로, 어떤 \texttt{rv.}가 이산인지, 연속인지, \texttt{singular}인지는 확률측도 $\mathbb{P}$와 \texttt{rv.} $X$ 모두에 의해 결정되는 것이지, 이 중 어느 하나에 의해 일방적으로 결정되는 것이 아니다. 즉, 둘 중 어느 하나만 보고서 $X$가 이산인지, 연속인지, \texttt{singular}인지는 알 수 없다. 이로 말미암아 우리가 \texttt{rv.}에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다.
+일반적으로, 어떤 확률벡터가 이산인지, 연속인지, \texttt{singular}인지는 확률측도 $\mathbb{P}$와 확률벡터 $X$ 모두에 의해 결정되는 것이지, 이 중 어느 하나에 의해 일방적으로 결정되는 것이 아니다. 즉, 둘 중 어느 하나만 보고서 $X$가 이산인지, 연속인지, \texttt{singular}인지는 알 수 없다. 이로 말미암아 우리가 확률벡터에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다.
 
 우선 $X$가 이산확률벡터이지만 그 치역은 가산이 아닐 수 있다. 물론, 대부분의 응용에서는 이산확률변수의 치역도 가산으로 주어지지만, 이는 우연의 일치 그 이상도 이하도 아니다. 극단적인 예시로 가측공간 $(\mathbb{R},\,\mathcal{B}_1)$ 위의 측도 $\mathbb{P}$를
 \begin{equation*}
@@ -280,11 +282,11 @@
         0&ow.
     \end{dcases*}
 \end{equation*}
-으로 잡아 확률공간 $(\mathbb{R},\,\mathcal{B}_1,\,\mathbb{P})$를 구성하고 \texttt{rv.} $X:\mathbb{R}\to\mathbb{R}$를 항등함수로 두면 명백히 $X$는 모든 실수를 그 함숫값으로 가지고 심지어 연속이지만, 분포 $\prob_X$가 한원소 집합 $\{0\}$을 지지집합으로 가지므로 $X$는 이산확률벡터이다. 다만, 정의로부터 분포가 가산 지지집합을 가지므로 $X$가 그 가산개의 값을 제외한 나머지 값을 가질 확률이 $0$이 되어 `사실상' 치역이 가산이라고 생각할 수는 있다. 하지만 영집합과 공집합이 비슷하지만 완전히 같지는 않은 것처럼 이 경우에도 `사실상' 치역이 가산인 것과 치역이 정말 가산인 것은 구분해야 할 것이다.
+으로 잡아 확률공간 $(\mathbb{R},\,\mathcal{B}_1,\,\mathbb{P})$를 구성하고 확률변수 $X:\mathbb{R}\to\mathbb{R}$를 항등함수로 두면 명백히 $X$는 모든 실수를 그 함숫값으로 가지고 심지어 연속이지만, 분포 $\prob_X$가 한원소 집합 $\{0\}$을 지지집합으로 가지므로 $X$는 이산확률벡터이다. 다만, 정의로부터 분포가 가산 지지집합을 가지므로 $X$가 그 가산개의 값을 제외한 나머지 값을 가질 확률이 $0$이 되어 `사실상' 치역이 가산이라고 생각할 수는 있다. 하지만 영집합과 공집합이 비슷하지만 완전히 같지는 않은 것처럼 이 경우에도 `사실상' 치역이 가산인 것과 치역이 정말 가산인 것은 구분해야 할 것이다.
 
 비슷하게, $X$가 연속확률벡터이지만 함수로서 연속이 아닐 수 있다. 애초에 표본공간 $\Omega$에 위상구조가 존재한다는 보장이 없으므로 연속성을 논할 수조차 없다. 그렇다고 표본공간에 위상구조가 적당히 정의되어 있고, 이에 대해 $X$가 연속이라고 해서 이가 연속확률변수냐 하면 이것 또한 아니다. 앞서 든 예시를 생각해보면 표본공간이 $\mathbb{R}$이고 이 위에 표준위상을 잡더라도 $X$가 연속이지만 연속확률변수가 아닐 수 있다. 다만, 정의로부터 연속확률벡터와 특이확률벡터는 \texttt{point mass}를 가질 수 없으므로 확률이 표본공간의 어느 한 점에 집중되어 있지 않고 전체에 고르게 퍼져 있으니, 이런 의미에서 `연속'이라 생각할 수는 있다.
 
-한편, 위의 정의에서 고등학교나 교양 통계학에서는 들어보지 못한 특이확률벡터라는 새로운 종류의 \texttt{rv.}가 등장했다. 다른 두 종류의 \texttt{rv.}는 고등학교 수준에서도 접할 수 있는 반면, 이제서야 특이확률벡터를 도입하는 것에는 그럴만한 이유가 있다. 우선 특이확률벡터는 다분히 이론적인 필요에 의한 \texttt{rv.}로 실생활의 응용에서는 거의 쓸모가 없다. 또한, 이산확률변수나 연속확률변수의 경우 기댓값이나 분산과 같은 개념의 도입과 계산이 쉬운 반면, 특이확률변수의 경우 이에 상당한 이론적 뒷받침이 필요하다. 이런 이유에서 이 책에서도 특이확률변수가 구체적인 예시로 주어지는 것은 이후에 배울 \texttt{Cantor} 분포 하나 뿐이다. 그렇다면 이런 단점에도 불구하고 특이확률벡터를 도입해야 할 이론적인 필요가 대체 무엇인가? 다음 정리는 이 질문에 대한 답이자 측도론의 에필로그에서 예고한 이번 절의 클라이막스이다.
+한편, 위의 정의에서 고등학교나 교양 통계학에서는 들어보지 못한 특이확률벡터라는 새로운 종류의 확률벡터가 등장했다. 다른 두 종류의 확률벡터는 고등학교 수준에서도 접할 수 있는 반면, 이제서야 특이확률벡터를 도입하는 것에는 그럴만한 이유가 있다. 우선 특이확률벡터는 다분히 이론적인 필요에 의한 확률벡터로 실생활의 응용에서는 거의 쓸모가 없다. 또한, 이산확률변수나 연속확률변수의 경우 기댓값이나 분산과 같은 개념의 도입과 계산이 쉬운 반면, 특이확률변수의 경우 이에 상당한 이론적 뒷받침이 필요하다. 이런 이유에서 이 책에서도 특이확률변수가 구체적인 예시로 주어지는 것은 이후에 배울 \texttt{Cantor} 분포 하나 뿐이다. 그렇다면 이런 단점에도 불구하고 특이확률벡터를 도입해야 할 이론적인 필요가 대체 무엇인가? 다음 정리는 이 질문에 대한 답이자 측도론의 에필로그에서 예고한 이번 절의 클라이막스이다.
 
 \begin{theorem}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$ 위의 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 다음의 조건
@@ -300,9 +302,9 @@
     정리 \ref{prop:rvProbSpace}로부터 $(\mathbb{R}^n,\,\mathcal{B}_n,\,\prob_X)$가 확률공간이므로 \texttt{Lebesgue}의 분해정리로부터 $\prob_X$는 절대연속성분 $(\prob_X)_\mathrm{ac}$, 순수 점 성분 $(\prob_X)_\mathrm{pp}$, 특이연속성분 $(\prob_X)_\mathrm{sc}$에 대해 $\prob_X=(\prob_X)_\mathrm{ac}+(\prob_X)_\mathrm{pp}+(\prob_X)_\mathrm{cs}$와 같이 분해된다. 또한, $\prob_X(\mathbb{R}^n)=1$이므로 $\alpha=(\prob_X)_\mathrm{ac}(\mathbb{R}^n),\,\beta=(\prob_X)_\mathrm{pp}(\mathbb{R}^n),\,\gamma=(\prob_X)_\mathrm{cs}(\mathbb{R}^n)$라 하면 $\alpha,\,\beta,\,\gamma$는 모두 유한하고 $\alpha+\beta+\gamma=1$이다. 이제 $\alpha,\,\beta,\,\gamma$가 모두 $0$이 아닌 특별한 경우를 생각해보자. 그렇다면 $\mathbb{P}_1:=(\prob_X)_\mathrm{ac}/\alpha,\,\mathbb{P}_2:=(\prob_X)_\mathrm{pp}/\beta,\,\mathbb{P}_3:=(\prob_X)_\mathrm{cs}/\gamma$가 모두 $\mathcal{B}_n$ 위의 확률측도이므로 $(\prob_X)_\mathrm{ac},\,(\prob_X)_\mathrm{pp},\,(\prob_X)_\mathrm{cs}$의 성질과 정리 \ref{thm:probSpaceRv}로부터 적당한 확률공간 $(\mathbb{R}^n,\,\mathcal{B}_n,\,\mathbb{P}_\mathrm{ac})$에서 정의된 연속확률벡터 $X_\mathrm{ac}:\mathbb{R}^n\to\mathbb{R}^n$, 적당한 확률공간 $(\mathbb{R}^n,\,\mathcal{B}_n,\,\mathbb{P}_\mathrm{pp})$에서 정의된 이산확률벡터 $X_\mathrm{pp}:\mathbb{R}^n\to\mathbb{R}^n$, 적당한 확률공간 $(\mathbb{R}^n,\,\mathcal{B}_n,\,\mathbb{P}_\mathrm{sc})$에서 정의된 특이확률벡터 $X_\mathrm{cs}:\mathbb{R}^n\to\mathbb{R}^n$가 존재하여 $\mathbb{P}_1=\prob_{X_\mathrm{ac}},\,\mathbb{P}_2=\prob_{X_\mathrm{pp}},\,\mathbb{P}_3=\prob_{X_\mathrm{cs}}$이고, 곧 $\prob_X=(\prob_X)_\mathrm{ac}+(\prob_X)_\mathrm{pp}+(\prob_X)_\mathrm{cs}=\alpha\mathbb{P}_1+\beta\mathbb{P}_2+\gamma\mathbb{P}_3=\alpha\prob_{X_\mathrm{ac}}+\beta\prob_{X_\mathrm{pp}}+\gamma\prob_{X_\mathrm{cs}}$이다. 한편, $\alpha,\,\beta,\,\gamma$ 중에 일부가 $0$인 경우에 대해서도 이와 비슷하게 하면 된다.
 \end{proof}
 
-연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 분류가 서로 배타적인 관계인 것은 맞지만 그렇다고 임의의 \texttt{rv.}가 반드시 이 셋 중 하나에 속하는 것은 아니다. 즉, \texttt{rv.} 중에는 연속도, 이산도, \texttt{singular}도 아닌 골치아픈 것들이 존재한다. (이런 \texttt{rv.}를 흔히 \textbf{\texttt{mixed type}}이라 부르며 특이확률벡터에 비할 바는 아니지만 그 실용성은 많이 떨어지는 편이다.) 이런 상황에서 위의 정리는 임의의 \texttt{rv.}에 대해 비록 이가 \texttt{mixed type}이더라도 그 분포는 적당한 연속확률벡터, 이산확률벡터, 특이확률벡터의 분포의 합으로 분해할 수 있다는 놀라운 결과를 함의한다. 곧 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 분류는 \texttt{rv.}의 공간의 기저와 비슷한 역할을 하며, 이 세 가지 \texttt{rv.}를 정의한 순간 사실상 모든 \texttt{rv.}의 분류를 끝마친 것과 다름없다.
+연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 분류가 서로 배타적인 관계인 것은 맞지만 그렇다고 임의의 확률벡터가 반드시 이 셋 중 하나에 속하는 것은 아니다. 즉, 확률벡터 중에는 연속도, 이산도, \texttt{singular}도 아닌 골치아픈 것들이 존재한다. (이런 확률벡터를 흔히 \textbf{\texttt{mixed type}}이라 부르며 특이확률벡터에 비할 바는 아니지만 그 실용성은 많이 떨어지는 편이다.) 이런 상황에서 위의 정리는 임의의 확률벡터에 대해 비록 이가 \texttt{mixed type}이더라도 그 분포는 적당한 연속확률벡터, 이산확률벡터, 특이확률벡터의 분포의 합으로 분해할 수 있다는 놀라운 결과를 함의한다. 곧 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 분류는 확률벡터의 공간의 기저와 비슷한 역할을 하며, 이 세 가지 확률벡터를 정의한 순간 사실상 모든 확률벡터의 분류를 끝마친 것과 다름없다.
 
-이러한 이유로 이론 전개에 있어서는 \texttt{mixed type rv.}를 고려할 필요 없이 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 \texttt{rv.}만 생각하면 되고, \texttt{mixed type rv.}는 이 세 종류의 \texttt{rv.}의 성질들을 적당히 섞어 가질 뿐이다. 이러니 고등학교 시절부터 연속확률벡터, 이산확률벡터의 두 가지 종류에만 지대한 관심을 가진 것이 너무나 당연하다. 이론적으로 다루기 힘든 특이확률벡터를 제외하면 이 둘을 다룸으로써 우리는 고등학교때부터 우리도 모르는 사이에 사실상 온갖 종류의 \texttt{rv.}를 모두 다루고 있던 셈이다!
+이러한 이유로 이론 전개에 있어서는 \texttt{mixed type rv.}를 고려할 필요 없이 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 확률벡터만 생각하면 되고, \texttt{mixed type} 확률벡터는 이 세 종류의 확률벡터의 성질들을 적당히 섞어 가질 뿐이다. 이러니 고등학교 시절부터 연속확률벡터, 이산확률벡터의 두 가지 종류에만 지대한 관심을 가진 것이 너무나 당연하다. 이론적으로 다루기 힘든 특이확률벡터를 제외하면 이 둘을 다룸으로써 우리는 고등학교때부터 우리도 모르는 사이에 사실상 온갖 종류의 확률벡터를 모두 다루고 있던 셈이다!
 
 이제 클라이막스의 여운을 뒤로 하고, \texttt{CDF}를 살펴볼 순서이다. 흔히 교양 통계학에서는 \texttt{PDF}를 배운 뒤 \texttt{CDF}를 배우므로 \texttt{PDF}의 개념을 도입하지도 않고 \texttt{CDF}를 정의하는 것이 의아할 수 있다. 하지만, 적어도 이론적으로는 \texttt{CDF}가 \texttt{PDF}보다 더 기본적인 개념이기에 이를 먼저 도입한다.
 
@@ -388,9 +390,9 @@
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 적당한 $\mathcal{B}_n$ 위의 $\sigma$-유한 측도 $\mu$가 존재하여 $\prob_X\ll\mu$라 하자. 이때 \texttt{Radon-Nikod\'ym} 도함수 $d\prob_X/d\mu$를 $X$의 $\mu$에 대한 \textbf{(확률)밀도함수((\texttt{probability}) \texttt{density function})}라 하고 $f_X$로 쓴다. 특별히, $n\geq2$인 경우 $f_X$를 \texttt{rv.} $X_1,\,\cdots,\,X_n$의 \textbf{결합(확률)밀도함수(\texttt{joint} (\texttt{probability}) \texttt{density function})}라 하기도 한다.
 \end{definition}
 
-이렇게 \texttt{Radon-Nikod\'ym} 도함수로 \texttt{PDF}를 정의하면서 이번에도 우리가 \texttt{PDF}에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다. 우선, \texttt{Radon-Nikod\'ym} 도함수가 유일하기는 하지만 그 유일성이 `$\mu$-거의 어디서나 같은 함수를 하나로 볼 때' 성립하는 것이므로 엄밀히는 유일하지 않다. 즉, $\mu$-영집합에서 조금씩 다른 무한히 많은 함수들이 모두 하나의 \texttt{rv.}의 \texttt{PDF}가 될 수 있으므로 일반적으로 특정 점에서의 \texttt{PDF}의 값을 물어보는 것은 의미가 없다. 그러나 \texttt{Radon-Nikod\'ym} 도함수를 추상적인 도구로만 사용했던 측도론에서와 달리 확률론에서는 \texttt{PDF}를 구체적인 함수로 다루어야 할 필요가 있으므로 혼란을 피하기 위해 \texttt{PDF}가 될 수 있는 무한히 많은, $\mu$-거의 어디서나 같은 함수 중 특정한 하나를 \texttt{PDF}의 \textbf{\texttt{version}}이라 한다. 물론, 표기상의 편의를 이유로 논의의 대상이 \texttt{PDF}인지, \texttt{PDF}의 \texttt{version}인지를 명시적으로 밝히지 않는 경우가 대부분이지만, $L^p$ 공간에서 동치류로서의 $f$와 구체적인 함수 $f$를 논의의 맥락으로 큰 혼란 없이 구분하였듯이 이 둘 또한 구분에 큰 어려움은 없을 것이다.
+이렇게 \texttt{Radon-Nikod\'ym} 도함수로 \texttt{PDF}를 정의하면서 이번에도 우리가 \texttt{PDF}에 대해 당연하게 생각하던 사실들에 미묘한 혼란이 생겨나게 된다. 우선, \texttt{Radon-Nikod\'ym} 도함수가 유일하기는 하지만 그 유일성이 `$\mu$-거의 어디서나 같은 함수를 하나로 볼 때' 성립하는 것이므로 엄밀히는 유일하지 않다. 즉, $\mu$-영집합에서 조금씩 다른 무한히 많은 함수들이 모두 하나의 확률벡터의 \texttt{PDF}가 될 수 있으므로 일반적으로 특정 점에서의 \texttt{PDF}의 값을 물어보는 것은 의미가 없다. 그러나 \texttt{Radon-Nikod\'ym} 도함수를 추상적인 도구로만 사용했던 측도론에서와 달리 확률론에서는 \texttt{PDF}를 구체적인 함수로 다루어야 할 필요가 있으므로 혼란을 피하기 위해 \texttt{PDF}가 될 수 있는 무한히 많은, $\mu$-거의 어디서나 같은 함수 중 특정한 하나를 \texttt{PDF}의 \textbf{\texttt{version}}이라 한다. 물론, 표기상의 편의를 이유로 논의의 대상이 \texttt{PDF}인지, \texttt{PDF}의 \texttt{version}인지를 명시적으로 밝히지 않는 경우가 대부분이지만, $L^p$ 공간에서 동치류로서의 $f$와 구체적인 함수 $f$를 논의의 맥락으로 큰 혼란 없이 구분하였듯이 이 둘 또한 구분에 큰 어려움은 없을 것이다.
 
-다음으로, 지금까지는 연속확률벡터와 이산확률벡터에 대해서만 \texttt{PDF}를 생각했지만 위의 정의에서 볼 수 있듯이 임의의 \texttt{rv.}에 대해서도 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$만 잘 잡아주면 얼마든지 $X$의 \texttt{PDF}를 생각할 수 있다. 한편, 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 \texttt{rv.}만 생각해도 충분하다는 사실에 놀라워했던 것이 불과 몇 페이지 전인데 굳이 이렇게 지나칠 정도로 일반적으로 \texttt{PDF}를 도입하는 것이 의아하게 느껴질 수 있다. 그러나 이는 \texttt{mixed-type rv.}의 \texttt{PDF}를 직접 다루기 위함이 아니라 연속확률벡터와 이산확률벡터의 \texttt{PDF}를 동시에 다루기 위함이다. 고등학교나 교양 통계학에서 연속확률벡터와 이산확률벡터의 기댓값이나 분산 같은 성질들을 논할 때, 각각 경우를 나누어 전자는 적분으로, 후자는 합으로 접근했던 것을 기억할 것이다. 우리는 위에서 일반적으로 정의된 \texttt{PDF}와 측도론의 에필로그에서 소개한 셈측도를 이용해 드디어 이런 번거로움에서 벗어날 수 있다.
+다음으로, 지금까지는 연속확률벡터와 이산확률벡터에 대해서만 \texttt{PDF}를 생각했지만 위의 정의에서 볼 수 있듯이 임의의 확률벡터에 대해서도 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$만 잘 잡아주면 얼마든지 $X$의 \texttt{PDF}를 생각할 수 있다. 한편, 연속확률벡터, 이산확률벡터, 특이확률벡터의 세 가지 확률벡터만 생각해도 충분하다는 사실에 놀라워했던 것이 불과 몇 페이지 전인데 굳이 이렇게 지나칠 정도로 일반적으로 \texttt{PDF}를 도입하는 것이 의아하게 느껴질 수 있다. 그러나 이는 \texttt{mixed-type} 확률벡터의 \texttt{PDF}를 직접 다루기 위함이 아니라 연속확률벡터와 이산확률벡터의 \texttt{PDF}를 동시에 다루기 위함이다. 고등학교나 교양 통계학에서 연속확률벡터와 이산확률벡터의 기댓값이나 분산 같은 성질들을 논할 때, 각각 경우를 나누어 전자는 적분으로, 후자는 합으로 접근했던 것을 기억할 것이다. 우리는 위에서 일반적으로 정의된 \texttt{PDF}와 측도론의 에필로그에서 소개한 셈측도를 이용해 드디어 이런 번거로움에서 벗어날 수 있다.
 
 한편, 정의에서 볼 수 있듯이 $\prob_X\ll\mu$인 $\sigma$-유한 측도 $\mu$를 무엇으로 택하는지에 따라 그 \texttt{PDF}가 달라지므로 $\mu$를 반드시 명시해 주어야 하는데, 우리가 주로 다룰 연속확률벡터와 이산확률벡터의 경우 이에 대한 관례가 있다. 먼저 연속확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우 그 정의상 $\prob_X\ll\mu_n$이 항상 성립하므로 특별한 언급이 없는 이상 연속확률벡터의 \texttt{PDF}는 $\mu_n$에 대한 \texttt{PDF}로 생각한다. 이산확률벡터 $X:\Omega\to\mathbb{R}^n$의 경우는 조금 복잡한데, 우선 정의상 $\prob_X$는 가산 지지집합 $A\in\mathcal{B}_n$를 가진다. 물론, 이때의 가산 지지집합은 유일하지 않지만 임의의 $x\in A$에 대해 $\prob_X\{x\}>0$이라는 조건을 추가하면 유일하게 주어진다. 그렇다면 $(\prob_X,\,\mathcal{B}_n,\,\#)$에 대해 $\prob_X\ll\#_A$임이 자명하고, 이때 $\#_A$가 $\sigma$-유한임도 자명하므로 특별한 언급이 없는 이상 이산확률벡터의 \texttt{PDF}는 $\#_A$에 대한 \texttt{PDF}로 생각한다. 나아가, 이산확률벡터의 경우 \texttt{PDF}의 \texttt{version}으로 특별한 언급이 없는 이상 $\mathbb{R}^n\setminus A$에서 $0$인 \texttt{version}을 택하는 관례도 있다. 이런 관례를 따르면 이때의 \texttt{PDF}가 우리가 기존에 알던 \texttt{PMF}가 된다는 것을 잠시 후에 알게 될 것이다.
 
@@ -449,7 +451,7 @@
     이는 따름정리 \ref{cor:FTC1}와 정리 \ref{thm:PDFProp}의 iii으로부터 자명하다
 \end{proof}
 
-비슷하게, 다음 정리는 어떤 \texttt{rv.}가 연속확률벡터인지를 판단할 때 유용하다.
+비슷하게, 다음 정리는 어떤 확률벡터가 연속인지를 판단할 때 유용하다.
 
 \begin{theorem}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 \texttt{TFAE}.
@@ -470,7 +472,7 @@
 
 \section{Expectation}
 
-이번 절에서는 \texttt{rv.}의 대표적인 통계량 중 하나인 기댓값과 분산을 엄밀하게 도입하고, 이와 관련된 부등식을 증명하는 것을 목표로 한다. 통계학의 큰 연구주제 중 하나는 `정보의 단순화'라 할 것이다. 당연히, 이때 단순화의 정도와 이에 따른 정보의 손실은 서로 \texttt{trade-off}의 관계에 있어서 단순화를 많이 하면 할수록 정보의 전달이 용이하지만 그만큼 손실되는 정보도 많아지고, 역으로 손실되는 정보의 양을 줄이면 줄일수록 단순화의 정도가 감소하여 전달이 어려워진다. 이런 상황에서 우리는 정보의 손실을 최소한으로 유지하면서도 정보를 단순하게 전달할 수 있는 좋은 방법을 찾고자 하는데, 이번 절에서 알아볼 기댓값은 어떤 분포의 정보를 단 하나의 통계량으로 단순화하여 전달할 수 있는 좋은 방법 중 하나이다. (이와 같이 분포의 정보를 요약하는 통계량을 그 분포의 대푯값이라 하며 기댓값 외에도 중앙값, 최빈값 등이 있다. 각 대푯값은 나름의 장단점이 있기에 어떤 상황에서 무엇을 써야 하는지를 잘 판단하여 사용해야 한다.) 
+이번 절에서는 확률변수의 대표적인 통계량 중 하나인 기댓값과 분산을 엄밀하게 도입하고, 이와 관련된 부등식을 증명하는 것을 목표로 한다. 통계학의 큰 연구주제 중 하나는 `정보의 단순화'라 할 것이다. 당연히, 이때 단순화의 정도와 이에 따른 정보의 손실은 서로 \texttt{trade-off}의 관계에 있어서 단순화를 많이 하면 할수록 정보의 전달이 용이하지만 그만큼 손실되는 정보도 많아지고, 역으로 손실되는 정보의 양을 줄이면 줄일수록 단순화의 정도가 감소하여 전달이 어려워진다. 이런 상황에서 우리는 정보의 손실을 최소한으로 유지하면서도 정보를 단순하게 전달할 수 있는 좋은 방법을 찾고자 하는데, 이번 절에서 알아볼 기댓값은 어떤 분포의 정보를 단 하나의 통계량으로 단순화하여 전달할 수 있는 좋은 방법 중 하나이다. (이와 같이 분포의 정보를 요약하는 통계량을 그 분포의 대푯값이라 하며 기댓값 외에도 중앙값, 최빈값 등이 있다. 각 대푯값은 나름의 장단점이 있기에 어떤 상황에서 무엇을 써야 하는지를 잘 판단하여 사용해야 한다.) 
 
 기댓값은 확률변수가 가질 것으로 가장 기대할 수 있는 값이라 해석할 수 있다. 기댓값은 분포의 여러 대푯값 중에서 가장 널리 이용되는 통계량으로 추정이나 관련 가설의 검정 등에 있어 많은 장점을 지니지만, \texttt{outlier}와 같은 극단치에 민감하여 때로는 분포에 대해 다소 오인의 가능성이 있는 정보를 전달할 수도 있다는 단점을 가진다. 이러한 기댓값은 기본적으로 확률변수의 적분으로 정의된다.
 
@@ -478,7 +480,7 @@
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 만약 $X$가 적분가능하다면 $\int_\Omega X\,d\mathbb{P}$를 $X$의 \textbf{기댓값(\texttt{expectation})} 혹은 \textbf{평균(\texttt{mean})}이라 하고 $\expect(X),\,\mu_X$ 혹은 간단히 $\mu$로 쓴다.
 \end{definition}
 
-기댓값이 정의되기 위해서는 확률공간과 그 위에서 정의된 \texttt{rv.}만 있으면 충분하다는 점에 주목하기 바란다. 고등학교나 교양 통계학에서는 기댓값이 정의되기 위해서는 \texttt{rv.}가 반드시 연속이거나 이산이어서 \texttt{PDF}나 \texttt{PMF}가 있어야 했다. 그러나 위의 정의는 일반적인 \texttt{mixed-type rv.}에 대해서도 기댓값을 정의할 수 있도록 해준다.  한편, 정의에서 볼 수 있듯이 기댓값은 확률측도의 적분에 불과하므로 이에 관한 기본적인 성질들은 대부분 적분의 성질들로부터 자명하게 유도된다.
+기댓값이 정의되기 위해서는 확률공간과 그 위에서 정의된 \texttt{rv.}만 있으면 충분하다는 점에 주목하기 바란다. 고등학교나 교양 통계학에서는 기댓값이 정의되기 위해서는 확률변수가 반드시 연속이거나 이산이어서 \texttt{PDF}나 \texttt{PMF}가 있어야 했다. 그러나 위의 정의는 일반적인 \texttt{mixed-type} 확률변수에 대해서도 기댓값을 정의할 수 있도록 해준다. 한편, 정의에서 볼 수 있듯이 기댓값은 확률변수의 적분에 불과하므로 이에 관한 기본적인 성질들은 대부분 적분의 성질들로부터 자명하게 유도된다.
 
 \begin{proposition}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}$에 대해 $\expect(X)$가 존재할 필요충분조건은 $\expect(|X|)$가 존재하는 것이다.
@@ -508,7 +510,7 @@
     v. 이는 iii과 iv로부터 자명하다.
 \end{proof}
 
-기댓값의 선형성으로부터 $X-\mu_X$의 기댓값은 항상 $0$이다. 이렇게 원래의 \texttt{rv.}에서 그 기댓값을 빼는 것을 \textbf{\texttt{centering}}이라 하며, 기댓값이 서로다른 분포를 비교할 때에 자주 사용되는 방법이다. 한편, 다양한 수렴정리들도 동일하게 성립한다.
+기댓값의 선형성으로부터 $X-\mu_X$의 기댓값은 항상 $0$이다. 이렇게 원래의 확률변수에서 그 기댓값을 빼는 것을 \textbf{\texttt{centering}}이라 하며, 기댓값이 서로다른 분포를 비교할 때에 자주 사용되는 방법이다. 한편, 다양한 수렴정리들도 동일하게 성립한다.
 
 \begin{theorem}[Monotone convergence theorem]
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 음이 아닌 \texttt{rv.} $X_i:\Omega\to\mathbb{R}^+_0$의 열 $\{X_i\}$와 음이 아닌 \texttt{rv.} $X:\Omega\to\mathbb{R}^+_0$에 대해 $X_i\uparrow X$ (\texttt{as.})이고 $\expect(X)$가 존재한다고 하면 모든 $i\in\mathbb{N}$에 대해 $\expect(X_i)$도 존재하고 $\expect(X_i)\uparrow\expect(X)$이다.
@@ -562,7 +564,7 @@
     가정으로부터 $\prob_X$의 가산 지지집합 $A\in\mathcal{B}_n$가 존재하여 \texttt{WLOG}, 필요하다면 몇몇 원소를 제거하여 임의의 $x\in A$에 대해 $\prob_X\{x\}>0$이라 해도 된다. 표기의 편의를 위해 $\mathcal{A}=\mathcal{B}_n\vert_A$라 하면 $\#_A\vert_\mathcal{A}=\#\vert_\mathcal{A}$는 가측공간 $(A,\,\mathcal{A})$ 위의 셈측도이므로 위의 정리와 $f_X$의 \texttt{version}을 택하는 관례 그리고 정리 \ref{thm:intRistriction}의 iii으로부터 $\expect(g(X))=\int_{\mathbb{R}^n}f_Xg\,d\#_A=\int_Af_Xg\,d\#_A=\int_A(f_Xg)\vert_A\,d\#\vert_\mathcal{A}=\sum_{x\in A}f_X(x)g(x)=\sum_{x\in\mathbb{R}^n}f_X(x)g(x)$이다.
 \end{proof}
 
-다음으로 넘어가기 전에, 기댓값에 대해 한 가지 유념해야 할 점이 있다. 기댓값의 정의에는 이가 마치 어떤 확률변수의 특성인 것처럼 쓰여 있지만 사실 기댓값은 확률변수의 특성이 아닌, 분포의 특성이어서 서로 다른 확률공간에서 정의된 서로다른 확률변수라도 그 분포가 같다면 기댓값도 같다. 실제로 확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$와 확률공간 $(\Omega',\,\mathcal{F}',\,\mathbb{P}')$에서 정의된 \texttt{rv.} $Y:\Omega'\to\mathbb{R}^n$에 대해 만약 $\prob_X=\prob_Y$라면 정리 \ref{thm:expectDistribution}로부터 $\expect(X)=\int_{\mathbb{R}^n}x\,d\prob_X(x)=\expect(Y)$이다. 이러한 사실은 기댓값이 분포의 정보를 요약하여 전달하는 통계량이라는 점에서 어떻게 보면 당연한 것이다.
+다음으로 넘어가기 전에, 기댓값에 대해 한 가지 유념해야 할 점이 있다. 기댓값의 정의에는 이가 마치 어떤 확률변수의 특성인 것처럼 쓰여 있지만 사실 기댓값은 확률변수의 특성이 아닌, 분포의 특성이어서 서로 다른 확률공간에서 정의된 서로다른 확률변수라도 그 분포가 같다면 기댓값도 같다. 실제로 확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$와 $(\Omega',\,\mathcal{F}',\,\mathbb{P}')$에서 각각 정의된 확률변수 $X:\Omega\to\mathbb{R},\,Y:\Omega'\to\mathbb{R}$에 대해 만약 $X\equiv Y$라면 정리 \ref{thm:expectDistribution}로부터 $\expect(X)=\int_{\mathbb{R}^n}x\,d\prob_X(x)=\expect(Y)$이다. 이러한 사실은 기댓값이 분포의 정보를 요약하여 전달하는 통계량이라는 점에서 어떻게 보면 당연한 것이다.
 
 기댓값에 이어 살펴볼 통계량은 분산이다. 기댓값이 분포의 정보를 요약하여 전달하는 좋은 통계량인 것은 사실이지만, 이가 분포의 정보를 완벽하게 전달하지는 못한다. 이때 발생하는 정보의 손실이 크게 중요하지 않은 경우도 있지만, 때로는 기댓값만으로는 부족한 경우도 있다. 이에 기댓값만을 전달할 때 손실되는 정보를 보충할 목적으로 보조적인 통계량을 제공할 수 있는데, 보통 분포가 기댓값으로부터 퍼져있는 정도를 의미하는 분산이나 표준편차를 제공한다. (이와 같이 분포가 퍼져있는 정도를 의미하는 통계량을 그 분포의 산포도라 하며 분산과 표준편차 이외에도 평균절대편차(\texttt{MAD}; \texttt{Mean Absolute Deviation}), 사분위수범위(\texttt{IQR}; \texttt{InterQuartile Range}) 등이 있다.) 이러한 분산은 기본적으로 기댓값으로 정의된다.
 
@@ -607,6 +609,8 @@
     \end{align*}
    에서 정리는 자명하다.
 \end{proof}
+
+기댓값과 분산의 성질로부터 $\var(X)$가 존재하고 $0$이 아니라면 $(X-\mu_X)/\sigma_X$의 기댓값과 분산은 항상 각각 $0,\,1$이다. 이렇게 원래의 확률변수에서 그 기댓값을 빼고, 그 표준편차로 나누는 것을 \textbf{표준화(\texttt{standardization})}라 하며, 기댓값과 분산이 서로다른 분포를 비교할 때 자주 사용되는 방법이다.
 
 이제 기댓값에 관한 다양한 부등식을 알아보는 것으로 이번 절을 마무리하자. 이러한 부등식은 이후 확률론의 다양한 정리를 증명할 때에 약방의 감초와 같이 사용될 것이다.
 
@@ -823,12 +827,12 @@
     에서 $e^{t^\trans|X|}\ind_{A_j}(X)$가 적분가능하고, 곧 $e^{t^\trans|X|}=\sum_{j=1}^{2^n}e^{t^\trans|X|}\ind_{A_j}(X)$도 적분가능하여 $\expect(e^{t^\trans|X|})$가 존재한다. 그렇다면 이는 임의의 $t\in V$에 대해 $\expect(e^{|t|^\trans|X|})$가 존재함을 함의하는 한편, $U=\mathbb{R}^n$인 경우에는 이상의 논의에서 $V=\mathbb{R}^n$으로 택할 수 있음이 자명하므로 증명이 끝난다.
 \end{proof}
 
-\begin{theorem}
+\begin{theorem}\label{thm:MGFTaylor}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 $M_X$가 적당한 $0$의 근방 $U\subseteq\mathbb{R}^n$ 위에서 존재하면 임의의 $k\in\mathbb{N}_0^n$에 대해 $X$의 $k$차 적률이 존재한다. 나아가, 적당한 $0$의 근방 $V\subseteq U$가 존재하여 임의의 $t\in V$에 대해 
     \begin{equation*}
-        M_X(t)=\sum_{k\in\mathbb{N}_0^n}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}
+        M_X(t)=\sum_{j=0}^\infty\sum_{k_1+\cdots+k_n=j}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}=\sum_{k\in\mathbb{N}_0^n}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}
     \end{equation*}
-    이다. 여기서 우변의 합은 절대수렴하여 \texttt{well-define}된다.
+    이다. 특별히, $U=\mathbb{R}^n$이면 $V=\mathbb{R}^n$으로 잡을 수 있으며, 여기서 급수는 절대수렴하여 \texttt{well-define}된다.
 \end{theorem}
 
 \begin{proof}
@@ -861,7 +865,27 @@
     \begin{equation*}
         \sum_{j=0}^\infty\sum_{k_1+\cdots+k_n=j}\bigg|\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}\bigg|\leq\sum_{j=0}^\infty\sum_{k_1+\cdots+k_n=j}\expect\bigg(\prod_{i=1}^n|X_i|^{k_i}\bigg)\prod_{i=1}^n\frac{|t_i|^{k_i}}{k_i!}
     \end{equation*}
-    이므로 보조정리로부터 $t_0$를 충분히 작게 잡아주면 $\expect(e^{|t|^{\,\trans}|X|})$가 존재하고, (*)에서와 비슷하게 하여 (*)의 급수가 절대수렴함을 쉽게 보일 수 있다. 이로부터 (*)의 급수에서의 합의 순서를 바꿀 수 있으므로 원하는 형태의 식을 얻고, 증명이 끝난다.
+    이므로 보조정리로부터 $t_0$를 충분히 작게 잡아주면 $\expect(e^{|t|^{\,\trans}|X|})$가 존재하고, (*)에서와 비슷하게 하여 (*)의 급수가 절대수렴함을 쉽게 보일 수 있다. 이로부터 (*)의 급수에서의 합의 순서를 바꿀 수 있으므로 원하는 형태의 식을 얻고, $U=\mathbb{R}^n$인 경우에는 이상의 논의에서 $V=\mathbb{R}^n$으로 택할 수 있음이 자명하므로 증명이 끝난다.
+\end{proof}
+
+\begin{theorem}\label{thm:MGFDifferentiation}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 $M_X$가 적당한 $0$의 근방 $U\subseteq\mathbb{R}^n$ 위에서 존재한다고 하자. 그렇다면 임의의 $k\in\mathbb{N}_0^n$와 임의의 $t\in U$에 대해 $K=\sum_{i=1}^nk_i$라 하면 $\expect((\prod_{i=1}^nX_i^{k_i})e^{t^\trans X})$가 존재하고
+    \begin{equation*}
+        \frac{\partial^K}{\partial t_1^{k_1}\cdots\partial t_n^{k_n}}M_X(t)=\expect\bigg(\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)e^{t^\trans X}\bigg)
+    \end{equation*}
+    이다.
+\end{theorem}
+
+\begin{proof}
+    간결한 논의를 위해 $k_n\ne0$이라 하자. ($k_n=0$인 경우에도 이와 비슷하게 하면 된다.) 임의의 $t\in U$를 고정하면 적당한 $0$의 근방 $V\subseteq\mathbb{R}$가 존재하여 임의의 $h\in V$에 대해 $t+h\mathbf{e}_n\in U$이다. 이제 함수 $f:\Omega\times V$를 $f:(\omega,\,h)\mapsto e^{(t+h\mathbf{e}_n)^\trans X(\omega)}$로 두면 임의의 $(\omega,\,h)\in\Omega\times V$에 대해 $|(\partial/\partial h)f(\omega,\,h)|=|X_n(\omega)e^{(t+h\mathbf{e}_n)^\trans X(\omega)}|=|X_n(\omega)|$이고 $\expect(X_n)$이 존재하므로 $f$가 \texttt{Leibniz}의 법칙의 모든 조건을 만족시킨다. 따라서 함수 $h\mapsto\int_\Omega e^{(t+h\mathbf{e}_n)^\trans X}\,d\mathbb{P}=M_X(t+h\mathbf{e}_n)$는 미분가능하고 $\expect(X_ne^{t^\trans X})$가 존재하며, $(\partial/\partial t_n)M_X(t)=(d/dh)M_X(t+h\mathbf{e}_n)\vert_{h=0}=\int_\Omega X_ne^{t^\trans X}\,d\mathbb{P}=\expect(X_ne^{t^\trans X})$이다. 이제 이와 비슷하게 $K-1$번 반복하면 원하는 결과를 얻는다.
+\end{proof}
+
+\begin{corollary}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 $M_X$가 적당한 $0$의 근방 $U\subseteq\mathbb{R}^n$ 위에서 존재한다고 하자. 그렇다면 임의의 $k\in\mathbb{N}_0^n$에 대해 $K=\sum_{i=1}^nk_i$라 하면 $\expect(\prod_{i=1}^nX_i^{k_i})=(\partial^K/\partial t_1^{k_1}\cdots\partial t_n^{k_n})M_X(0)$이다. 이때, 편미분의 순서는 중요하지 않다.
+\end{corollary}
+
+\begin{proof}
+    이는 위의 정리로부터 자명하다.
 \end{proof}
 
 \begin{definition}
@@ -890,35 +914,74 @@
 
     ii. 임의의 $t\in\mathbb{R}^n$에 대해 $|\varphi_X(t)|=|\expect(e^{\imag\,t^\trans X})|\leq\expect(|e^{\imag\,t^\trans X}|)=\expect(1)=1$이므로 이는 자명하다.
 
-    iii. 함수 $f:\Omega\times\mathbb{R}^n$를 $f:(\omega,\,t)\mapsto|e^{\imag\,t^\trans X(\omega)}-1|$로 두면 임의의 $\omega\in\Omega$에 대해 $f_\omega$는 연속이다. 또한, 임의의 $(\omega,\,t)\in\Omega\times\mathbb{R}^n$에 대해 $|e^{\imag\,t^\trans X(\omega)}-1|\leq|e^{\imag\,t^\trans X(\omega)}|+1=2$이므로 임의의 $t\in\mathbb{R}^n$에 대해 $f^t$는 적분가능하고 $|f|\leq2$이다. 이상으로부터 $f$가 따름정리 \ref{cor:integralContinuous}의 조건을 모두 만족시킴을 알 수 있으므로 함수 $t\mapsto\int_\Omega|e^{\imag\,t^\trans X(\omega)}-1|\,d\mathbb{P}=\expect(|e^{\imag\,t^\trans X}-1|)$는 연속이다. 특히 이가 $0$에서 연속이므로 $t\to0$이면 $\expect(|e^{\imag\,t^\trans X}-1|)\to0$이고, 곧 임의의 $\epsilon>0$을 택하면 적당한 $\delta>0$가 존재하여 $|t|<\delta$이면 $\expect(|e^{\imag\,t^\trans X}-1|)<\epsilon$이다. 이로부터 $||s-t||<\delta$인 임의의 $s,\,t\in\mathbb{R}^n$에 대해 $|\varphi_X(s)-\varphi_X(t)|=|\expect(e^{\imag\,s^\trans X}-e^{\imag\,t^\trans X})|\leq\expect(|e^{\imag\,t^\trans X}(e^{\imag(s-t)^\trans X}-1)|)=\expect(|e^{\imag(s-t)^\trans X}-1|)<\epsilon$이 되어 $\varphi_X$가 균등연속임을 안다.
+    iii. 함수 $f:\Omega\times\mathbb{R}^n$를 $f:(\omega,\,t)\mapsto|e^{\imag\,t^\trans X(\omega)}-1|$로 두면 임의의 $\omega\in\Omega$에 대해 $f_\omega$는 연속이다. 또한, 임의의 $(\omega,\,t)\in\Omega\times\mathbb{R}^n$에 대해 $|e^{\imag\,t^\trans X(\omega)}-1|\leq|e^{\imag\,t^\trans X(\omega)}|+1=2$이므로 임의의 $t\in\mathbb{R}^n$에 대해 $f^t$는 적분가능하고 $|f|\leq2$이다. 이상으로부터 $f$가 따름정리 \ref{cor:integralContinuous}의 조건을 모두 만족시킴을 알 수 있으므로 함수 $t\mapsto\int_\Omega|e^{\imag\,t^\trans X}-1|\,d\mathbb{P}=\expect(|e^{\imag\,t^\trans X}-1|)$는 연속이다. 특히 이가 $0$에서 연속이므로 $t\to0$이면 $\expect(|e^{\imag\,t^\trans X}-1|)\to0$이고, 곧 임의의 $\epsilon>0$을 택하면 적당한 $\delta>0$가 존재하여 $|t|<\delta$이면 $\expect(|e^{\imag\,t^\trans X}-1|)<\epsilon$이다. 이로부터 $||s-t||<\delta$인 임의의 $s,\,t\in\mathbb{R}^n$에 대해 $|\varphi_X(s)-\varphi_X(t)|=|\expect(e^{\imag\,s^\trans X}-e^{\imag\,t^\trans X})|\leq\expect(|e^{\imag\,t^\trans X}(e^{\imag(s-t)^\trans X}-1)|)=\expect(|e^{\imag(s-t)^\trans X}-1|)<\epsilon$이 되어 $\varphi_X$가 균등연속임을 안다.
 \end{proof}
 
 \begin{theorem}
     확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$에 대해 $M_X$가 $\mathbb{R}^n$ 위에서 존재하면 임의의 $t\in\mathbb{R}^n$에 대해
     \begin{equation*}
-        \varphi_X(t)=\sum_{k\in\mathbb{N}_0^n}\imag^{k_1+\cdots+k_n}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}
+        \varphi_X(t)=\sum_{j=0}^\infty\imag^j\sum_{k_1+\cdots+k_n=j}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}=\sum_{k\in\mathbb{N}_0^n}\imag^{k_1+\cdots+k_n}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}
     \end{equation*}
-    이다. 여기서 우변의 합은 절대수렴하여 \texttt{well-define}된다.
+    이다. 여기서 급수는 절대수렴하여 \texttt{well-define}된다.
 \end{theorem}
 
 \begin{proof}
-    \texttt{Taylor}의 정리로부터 임의의 $x\in\mathbb{R}^n$에 대해 임의의 $t\in\mathbb{R}^n$과 $k\in\mathbb{N}$를 택하면
+    \texttt{Taylor}의 정리로부터 임의의 $x\in\mathbb{R}^n$와 임의의 $k\in\mathbb{N}$에 대해 임의의 $t\in\mathbb{R}^n$를 택하면
     \begin{align*}
         e^{\imag\,t^\trans x}&=\sum_{j=0}^{k-1}\imag^j\frac{(t^\trans x)^j}{j!}+\imag^k\frac{(t^\trans x)^k}{(k-1)!}\int_0^1(1-s)^{k-1}e^{\imag\,st^\trans x}\,ds\\
         &=\sum_{j=0}^k\imag^j\frac{(t^\trans x)^j}{j!}+\imag^k\frac{(t^\trans x)^k}{(k-1)!}\int_0^1(1-s)^{k-1}(e^{\imag\,st^\trans x}-1)\,ds
     \end{align*}
-    이다. 여기서 마지막 등호는 $\int_0^1(1-s)^{k-1}\,ds=1/k$에서 성립한다. 이로부터
+    이다. 여기서 마지막 등호는 $\int_0^1(1-s)^{k-1}\,ds=1/k$에서 성립한다. 이로부터 임의의 $K\in\mathbb{N}$를 택하면
     \begin{align*}
-        \bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^k\imag^j\frac{(t^\trans X)^j}{j!}\bigg|&=\bigg|\imag^k\frac{(t^\trans x)^k}{(k-1)!}\int_0^1(1-s)^{k-1}e^{\imag\,st^\trans x}\,ds\bigg|
+        \bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^K\imag^j\frac{(t^\trans X)^j}{j!}\bigg|&=\bigg|\imag^{K+1}\frac{(t^\trans X)^{K+1}}{K!}\int_0^1(1-s)^Ke^{\imag\,st^\trans X}\,ds\bigg|\\
+        &\leq\frac{(|t|^\trans|X|)^{K+1}}{K!}\int_0^1(1-s)^K|e^{\imag\,st^\trans X}|\,ds\\
+        &=\frac{(|t|^\trans|X|)^{K+1}}{K!}\int_0^1(1-s)^K\,ds\\
+        &=\frac{(|t|^\trans|X|)^{K+1}}{(K+1)!}
     \end{align*}
     이고
     \begin{align*}
-        \bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^k\imag^j\frac{(t^\trans X)^j}{j!}\bigg|&=\bigg|\imag^k\frac{(t^\trans X)^k}{(k-1)!}\int_0^1(1-s)^{k-1}(e^{\imag\,st^\trans X}-1)\,ds\bigg|\\
-        &\leq\frac{(t^\trans X)^k}{(k-1)!}\int_0^1(1-s)^{k-1}|e^{\imag\,st^\trans X}-1|\,ds\\
-        &\leq\frac{(t^\trans X)^k}{(k-1)!}\int_0^1(1-s)^{k-1}(|e^{\imag\,st^\trans X}|+1)\,ds\\
-        &=\frac{(t^\trans X)^k}{(k-1)!}\int_0^12(1-s)^{k-1}\,ds\\
-        &=\frac{2(t^\trans X)^k}{k!}\\
+        \bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^K\imag^j\frac{(t^\trans X)^j}{j!}\bigg|&=\bigg|\imag^K\frac{(t^\trans X)^K}{(K-1)!}\int_0^1(1-s)^{K-1}(e^{\imag\,st^\trans X}-1)\,ds\bigg|\\
+        &\leq\frac{(|t|^\trans|X|)^K}{(K-1)!}\int_0^1(1-s)^{K-1}|e^{\imag\,st^\trans X}-1|\,ds\\
+        &\leq\frac{(|t|^\trans|X|)^K}{(K-1)!}\int_0^1(1-s)^{K-1}(|e^{\imag\,st^\trans X}|+1)\,ds\\
+        &=\frac{(|t|^\trans|X|)^K}{(K-1)!}\int_0^12(1-s)^{K-1}\,ds\\
+        &=\frac{2(|t|^\trans|X|)^K}{K!}
     \end{align*}
+    이므로
+    \begin{equation*}
+        \bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^K\imag^j\frac{(t^\trans X)^j}{j!}\bigg|\leq\min\bigg\{\frac{(|t|^\trans|X|)^{K+1}}{(K+1)!},\,\frac{2(|t|^\trans|X|)^K}{K!}\bigg\}
+    \end{equation*}
+    이다. 이는 곧
+    \begin{align*}
+        \bigg|\varphi_X(t)&-\sum_{j=0}^K\imag^j\sum_{k_1+\cdots+k_n=j}\expect\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)\prod_{i=1}^n\frac{t_i^{k_i}}{k_i!}\bigg|\\
+        &=\bigg|\varphi_X(t)-\sum_{j=0}^K\frac{\imag^j}{j!}\sum_{k_1+\cdots+k_n=j}\binom{j}{k_1\,\cdots\,k_n}\expect\bigg(\prod_{i=1}^nt_iX_i\bigg)\bigg|\\
+        &=\bigg|\varphi_X(t)-\sum_{j=0}^K\imag^j\frac{\expect((t^\trans X)^j)}{j!}\bigg|\\
+        &=\bigg|\expect\bigg(e^{\imag\,t^\trans X}-\sum_{j=0}^K\imag^j\frac{(t^\trans X)^j}{j!}\bigg)\bigg|\\
+        &\leq\expect\bigg(\bigg|e^{\imag\,t^\trans X}-\sum_{j=0}^K\imag^j\frac{(t^\trans X)^j}{j!}\bigg|\bigg)\\
+        &\leq\min\bigg\{\frac{\expect((|t|^\trans|X|)^{K+1})}{(K+1)!},\,\frac{2\expect((|t|^\trans|X|)^K)}{K!}\bigg\}\\
+        &\leq\min\bigg\{\frac{1}{(K+1)!}\sum_{k_1+\cdots+k_n=K+1}\binom{K+1}{k_1\,\cdots\,k_n}\expect\bigg(\prod_{i=1}^n|X_i|^{k_i}\bigg)\prod_{i=1}^nt_i^{k_i},\\
+        &\qquad\qquad\qquad\qquad\qquad\qquad\frac{2}{K!}\sum_{k_1+\cdots+k_n=K}\binom{l}{k_1\,\cdots\,k_n}\expect\bigg(\prod_{i=1}^n|X_i|^{k_i}\bigg)\prod_{i=1}^nt_i^{k_i}\bigg\}
+    \end{align*}
+    를 함의하는데, $M_X$가 $\mathbb{R}^n$ 위에서 존재하므로 정리 \ref{thm:MGFTaylor}로부터 $l\to\infty$이면 우변의 두 항이 모두 $0$으로 수렴하여 $\varphi_X(t)=\sum_{j=0}^\infty\imag^j\sum_{k_1+\cdots+k_n=j}\expect(\prod_{i=1}^nX_i^{k_i})\prod_{i=1}^nt_i^{k_i}/k_i!$임을 안다. 한편, 다시 정리 \ref{thm:MGFTaylor}로부터 이 급수가 졀대수렴함을 알고, 곧 합의 순서를 바꿀 수 있으므로 원하는 형태의 식을 얻는다.
+\end{proof}
+
+\begin{theorem}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$와 $k\in\mathbb{N}_0^n$에 대해 $X$의 $k$차 적률이 존재한다고 하자. 그렇다면 $K=\sum_{i=1}^nk_i$와 임의의 $t\in\mathbb{R}^n$에 대해 $\expect((\prod_{i=1}^nX_i^{k_i})e^{\imag\,t^\trans X})$가 존재하고
+    \begin{equation*}
+        \frac{\partial^K}{\partial t_1^{k_1}\cdots\partial t_n^{k_n}}\varphi_X(t)=\imag^K\expect\bigg(\bigg(\prod_{i=1}^nX_i^{k_i}\bigg)e^{\imag\,t^\trans X}\bigg)
+    \end{equation*}
+    이다. 이때, 편미분의 순서는 중요하지 않다.
+\end{theorem}
+
+\begin{proof}
+    증명은 정리 \ref{thm:MGFDifferentiation}의 증명과 거의 똑같다. 간결한 논의를 위해 $k_n\ne0$이라 하자. ($k_n=0$인 경우에도 이와 비슷하게 하면 된다.) 임의의 $t\in\mathbb{R}^n$를 고정하고 함수 $f:\Omega\times\mathbb{R}$를 $f:(\omega,\,h)\mapsto e^{\imag(t+h\mathbf{e}_n)^\trans X(\omega)}$로 두면 임의의 $(\omega,\,h)\in\Omega\times\mathbb{R}$에 대해 $|(\partial/\partial h)f(\omega,\,h)|=|\imag X_n(\omega)e^{\imag(t+h\mathbf{e}_n)^\trans X(\omega)}|=|X_n(\omega)|$이고 $\expect(X_n)$이 존재하므로 $f$가 \texttt{Leibniz}의 법칙의 모든 조건을 만족시킨다. 따라서 함수 $h\mapsto\int_\Omega e^{\imag(t+h\mathbf{e}_n)^\trans X}\,d\mathbb{P}=\varphi_X(t+h\mathbf{e}_n)$는 미분가능하고 $\expect(X_ne^{\imag\,t^\trans X})$가 존재하며, $(\partial/\partial t_n)\varphi_X(t)=(d/dh)\varphi_X(t+h\mathbf{e}_n)\vert_{h=0}=\int_\Omega\imag X_ne^{\imag\,t^\trans X}\,d\mathbb{P}=\imag\expect(X_ne^{\imag\,t^\trans X})$이다. 이제 이와 비슷하게 $K-1$번 반복하면 원하는 결과를 얻는다.
+\end{proof}
+
+\begin{corollary}
+    확률공간 $(\Omega,\,\mathcal{F},\,\mathbb{P})$에서 정의된 \texttt{rv.} $X:\Omega\to\mathbb{R}^n$와 $k\in\mathbb{N}_0^n$에 대해 $X$의 $k$차 적률이 존재한다고 하자. 그렇다면 $K=\sum_{i=1}^nk_i$에 대해 $\expect(\prod_{i=1}^nX_i^{k_i})=(\partial^K/\partial t_1^{k_1}\cdots\partial t_n^{k_n})\varphi_X(0)/\imag^K$이다. 이때, 편미분의 순서는 중요하지 않다.
+\end{corollary}
+
+\begin{proof}
+    이는 위의 정리로부터 자명하다.
 \end{proof}
 
 \begin{definition}
